[ADD] Plugins AutoPlay

--- a/public/index.html
+++ b/public/index.html
@@ -15,10 +15,13 @@
 
       <main class="container">
         <video class="movie">
-          <source src="../src//assets/static/bunny-video.mp4" />
+          <source
+            src="http://distribution.bbb3d.renderfarming.net/video/mp4/bbb_sunflower_1080p_60fps_normal.mp4"
+          />
         </video>
 
-        <button>Play/Pause</button>
+        <button id="playButton">Play/Pause</button>
+        <button id="muteButton">Mute/Unmute</button>
       </main>
     </div>
   </body>
