--- a/index.html
+++ b/index.html
@@ -102,6 +102,6 @@
         </li>
       </ul>
     </div>
-    <script src="./src/index.js" type="module"></script>
+    <script src="./src/index.ts" type="module"></script>
   </body>
 </html>
